# mundare

./: .baw  .dockerignore  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
cleanup/: __init__.py  __main__.py  cli.py  dump.py  load.py  ptn.py
cleanup/features/: backup.py  cleanup.py  translate.py
cleanup/part/: invalid.py  main.py
cleanup/translate/: lines.py
cleanup/writer/: image.py  result.py
docs/: index.rst
mundare/: __init__.py  __main__.py  cli.py  load.py  ptn.py
mundare/features/: backup.py  cleanup.py  translate.py
mundare/part/: invalid.py  main.py
mundare/translate/: lines.py
mundare/writer/: image.py  result.py
tests/: __init__.py  conftest.py  test_cli.py  test_codero.py  test_dumper.py  test_footnote.py  test_gap.py  test_headnote.py  test_horizontals.py  test_nofont.py  test_pagenumber.py  test_regression.py  test_translate.py  utils.py
